analyzer алгоритмы3